--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
+jobs:
+  include:
 
+    - stage: validate
+      script: auto/validate.sh
 
-script: build/deploy.sh
-script: build/solve.sh
-script: build/validate.sh
+    - stage: solve
+      script: autos/solve.sh
